style.css
body {
    margin: 0;
    font-family: Roboto, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    display: flex;
    flex-direction: column;
}
.header-logo-link {
    display: flex;
    justify-content: space-between;
    padding-top: 10px;
}

.header-info-image {
    display: flex;
    justify-content: space-between;
    padding-top: 120px;
    gap: 24px;
}

.header-info {
    text-wrap: wrap;
    width: 700px;
    height: 300px;
}

.header-logo {
    font-size: 24px;
    color: #f9faf8;
    padding-top: 10px;
}

.header, .footer {
    
    background-color: #1f2937;
}

.header {
    display: flex;
    flex-direction: column;
    padding-bottom: 120px;
    padding-top: 0;
}

.header, .content-1, .content-2, .content-3 {
    padding-left: 200px;
    padding-right: 200px;
}

.footer {
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 0;
    color: #e5e7eb;
}

.content-2 {
    background-color: #e5e7eb;
    height: 400px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.quote {
    width: 820px;
}
.person {
    width: 750px;
    text-align: right;
    font-size: 24px;
    font-weight: 600;
}

button {
    color: #ffffff;
    background-color: #3882f6;
    border-style: none;
    border-radius: 5px;
    padding: 8px 16px;
}

.main-text {
    color: #f9faf8;
    font-size: 48px;
    font-weight: extra-bold;
}
p, a {
    color: #e5e7eb;
    font-size: 18px;
}

a {
    text-decoration: none;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 16px;
}

.info-header {
    color: #1f2937;
    font-size: 36px;
    font-weight: extra-bold;
    padding-top: 40px;
    padding-bottom: 40px;
}
.quote {
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
    color: #1f2937;
}


.content-1 {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.cards {
    display: flex;
    justify-content: center;
    align-items: center;

    gap: 60px;
}

.cards img {
    border-style: solid;
    border-radius: 16px;
    border-color: #3882f6;
}

.card {
    width: 200px; 
    height: 200px;
    text-wrap: wrap;
    padding-bottom: 200px;
}

.text {
    font-size: 21px;
    text-align: center;
}

.content-3 {
    height: 150px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 100px 150px;
    background-color: #3882f6;
    border-radius: 10px;
    color: #e5e7eb;
}

button.footer-sign-up {
    border-style: solid;
    border-color: #e5e7eb;
    width: 100px;
    height:30px;
}

.reminder {
    font-size: 26px;
    font-weight: bold;
}

